--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "formik": "^2.2.6",
+    "history": "^5.0.0",
+    "node-sass": "^4.14.1",
     "query-string": "^7.0.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.5.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-redux": "^7.2.3",
     "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-spinners": "^0.11.0",
     "react-toastify": "^7.0.3",
     "reactstrap": "^8.9.0",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.0.1",
